@@ -1,4 +1,5 @@
 # $Id$
+
 #############################################################
 
 # Please send new entries to rpm-list@redhat.com
@@ -182,3 +183,10 @@ buildarch_compat: armv4: armv4b armv4l noarch
 buildarch_compat: armv4b: noarch
 buildarch_compat: armv4l: noarch
 buildarch_compat: parisc: noarch
+
+#############################################################
+
+macrofiles:	@RPMCONFIGDIR@/macros:@SYSCONFIGDIR@/macros:~/.rpmmacros
+
+#macrofiles:	@RPMCONFIGDIR@/macros:@RPMCONFIGDIR@/%{_target}/macros:@SYSCONFIGDIR@/macros:@SYSCONFIGDIR@/%{_target}/macros:~/.rpmmacros
+#include: @RPMCONFIGDIR@/%{_target}/rpmrc
